# tiger-chip-8

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml  lib.rs
core/architecture/: display.rs  emulator.rs  ram.rs  vram.rs
core/src/: lib.rs
core/src/architecture/: apu.rs  bus.rs  cpu.rs  display.rs  emulator.rs  keypad.rs  mod.rs  ram.rs  timers.rs  vram.rs
desktop/: Cargo.toml  display.rs  emulator.rs  main.rs
desktop/src/: apu.rs  args.rs  display.rs  emulator.rs  gui.rs  main.rs  rom.rs
src/: main.rs
src/core/: apu.rs  bus.rs  cpu.rs  display.rs  emulator.rs  input.rs  memory.rs  mod.rs  speaker.rs  timers.rs
src/desktop/: display.rs  emulator.rs  mod.rs
wasm/: Cargo.toml  Makefile
wasm/src/: apu.rs  display.rs  emulator.rs  gui.rs  lib.rs
web/: eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  tsconfig.json
web/pkg/: package.json  tiger_chip_8_wasm.d.ts  tiger_chip_8_wasm.js  tiger_chip_8_wasm_bg.wasm  tiger_chip_8_wasm_bg.wasm.d.ts
web/public/wasm/: package.json  tiger_chip_8_wasm.d.ts  tiger_chip_8_wasm.js  tiger_chip_8_wasm_bg.js  tiger_chip_8_wasm_bg.wasm  tiger_chip_8_wasm_bg.wasm.d.ts
web/src/app/: layout.tsx  page.tsx
web/src/components/sections/: Controls.tsx  Display.tsx  GameInfo.tsx  Header.tsx  Settings.tsx
web/src/components/ui/: select.tsx  slider.tsx
web/src/hooks/: useChip8.tsx
web/src/lib/: roms.ts
