[package]
name = "tiger-chip-8-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Emil Sharkov <emosharkov@gmail.com>"]
license = "MIT"
description = "WASM Bindings for CHIP-8 emulator"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
tiger-chip-8-core = { path = "../core" }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "HtmlAudioElement",
    "HtmlInputElement",
    "EventTarget",
    "Window",
    "Document",
    "CanvasRenderingContext2d",
    "Url",
    "Blob",
    "Event",
    "KeyboardEvent",
    "FileReader",
    "FileList",
    "File",
    ] }
